<resources>
    <string name="app_name">D.A.P. Passageiros</string>
    <string name="menu">Menu</string>
    <string name="acompanhar_trajeto">Acompanhar trajeto</string>
    <string name="meu_cadastro">Meu cadastro</string>
    <string name="lista_de_motoristas">Lista de Motoristas</string>
    <string name="copyright_2022_by_vuber">Copyright © 2022 by VUBER</string>
    <string name="navegacao">Navegação</string>
    <string name="destino">Destino:</string>
    <string name="tempo_estimado">Tempo Estimado:</string>
    <string name="msg_tela_login">Gestão inteligente de transporte escolar</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="salvar">Salvar</string>
    <string name="motoristas_em_sua_regiao">Motoristas em sua região</string>
    <string name="voce_ja_tem_uma_conta">Você já tem uma conta?</string>
    <string name="entre">Entre.</string>
    <string name="nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="cadastre_se">Cadastre-se.</string>
    <string name="nome_de_usuario">Nome de usuário</string>
    <string name="locais">Locais:</string>
    <string name="casa">Casa:</string>
    <string name="definir_grade_de_horarios">Definir grade de horários:</string>
    <string name="segunda_feira">Segunda-Feira</string>
    <string name="frequenta_aulas_nas_segundas">frequenta aulas nas segundas</string>
    <string name="terca_feira">Terça-Feira</string>
    <string name="frequenta_aulas_nas_tercas">frequenta aulas nas terças</string>
    <string name="quarta_feira">Quarta-Feira</string>
    <string name="frequenta_aulas_nas_quartas">frequenta aulas nas quartas</string>
    <string name="quinta_feira">Quinta-Feira</string>
    <string name="frequenta_aulas_nas_quintas">frequenta aulas nas quintas</string>
    <string name="sexta_feira">Sexta-Feira</string>
    <string name="frequenta_aulas_nas_sextas">frequenta aulas nas sextas</string>
    <string name="motorista">Motorista:</string>
    <string name="ver_motoristas_disponiveis">Ver motoristas disponiveis</string>
    <string name="editar">Editar</string>
    <string name="horario_de_aulas">Horário de Aulas:</string>
</resources>