<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastro">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="145dp"
        android:src="@drawable/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_mensagem"
        style="@style/edit_mensagem_login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_tela_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        />

    <TextView
        android:id="@+id/text_login"
        style="@style/Edit_Mensagem_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/cadastro"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_mensagem" />

    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text_em"
        android:hint="@string/nome"
        android:layout_marginTop="110dp"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_mensagem"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text_em"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_nome" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text_em"
        android:hint="@string/senha"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email" />


    <TextView
        android:id="@+id/text_mensagem_click"
        style="@style/Edit_Mensagem_Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voce_ja_tem_uma_conta"
        android:textColor="@color/LightGray"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintEnd_toStartOf="@id/text_mensagem_click1"
        app:layout_constraintTop_toBottomOf="@id/button"
        />

    <Button
        android:id="@+id/button"
        style="@style/Edit_Button"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/LightGray"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

    <TextView
        android:id="@+id/text_mensagem_click1"
        style="@style/Edit_Mensagem_Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entre"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/text_mensagem_click"
        app:layout_constraintEnd_toEndOf="@id/button"
        app:layout_constraintTop_toBottomOf="@id/button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>