<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".TelaPassageiro"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-61dp">

        <Toolbar
            android:id="@+id/toolbar_menu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/DarkGray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

                <ImageView
                    android:id="@+id/imageVubermoto"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/img_logo" />

                <ImageButton
                    android:id="@+id/btn_voltar"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/img_seta_voltar"
                    app:iconPadding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_gravity="start"/>

        </Toolbar>

        <ImageView
            android:id="@+id/avatar_passageiro"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_menu"
            android:background="@drawable/img_foto_perfil" />

        <EditText
            android:id="@+id/edit_txt_nomePassageiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:hint="@string/nome_de_usuario"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/avatar_passageiro"
            app:layout_constraintStart_toStartOf="@id/avatar_passageiro" />

        <TextView
            android:id="@+id/txt_locais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locais"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/edit_txt_nomePassageiro"
            app:layout_constraintStart_toStartOf="@id/edit_txt_nomePassageiro" />

        <ImageView
            android:id="@+id/img_casa"
            android:layout_width="23dp"
            android:layout_height="23dp"
            app:srcCompat="@drawable/img_casa"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/txt_locais"
            app:layout_constraintStart_toStartOf="@id/edit_txt_nomePassageiro" />

        <TextView
            android:id="@+id/txt_casa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casa"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/img_casa"
            app:layout_constraintTop_toTopOf="@id/img_casa" />

        <EditText
            android:id="@+id/edit_txt_endereco_casa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:hint="Insira seu endereço"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/txt_casa"
            app:layout_constraintTop_toBottomOf="@id/txt_casa" />

        <ImageView
            android:id="@+id/img_chapeu"
            android:layout_width="23dp"
            android:layout_height="23dp"
            app:srcCompat="@drawable/img_escolaridade"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/edit_txt_endereco_casa"
            app:layout_constraintStart_toStartOf="@id/img_casa" />

        <EditText
            android:id="@+id/edit_txt_nome_universidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:hint="insira o nome da Universidade"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@id/img_chapeu"
            app:layout_constraintTop_toTopOf="@id/img_chapeu" />

        <EditText
            android:id="@+id/lbl_endereco_universidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="0dp"
            android:hint="insira o endereço da Universidade"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/edit_txt_nome_universidade"
            app:layout_constraintTop_toBottomOf="@id/edit_txt_nome_universidade" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_grade_horarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:layout_marginTop="25dp"
            android:background="#E5E5E5"
            android:backgroundTint="#E5E5E5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_endereco_universidade">

                <TextView
                    android:id="@+id/txt_horario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/definir_grade_de_horarios"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_segunda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/segunda_feira"
                    android:textColor="@color/black"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/txt_horario"
                    app:layout_constraintStart_toStartOf="@id/txt_horario" />

                <CheckBox
                    android:id="@+id/checkbox_segunda"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginStart="12dp"
                    app:layout_constraintTop_toTopOf="@id/txt_segunda"
                    app:layout_constraintStart_toEndOf="@+id/txt_segunda"
                    android:text="@string/frequenta_aulas_nas_segundas" />

                <TextView
                    android:id="@+id/txt_terca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terca_feira"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/txt_segunda"
                    app:layout_constraintStart_toStartOf="@id/txt_segunda" />

                <CheckBox
                    android:id="@+id/checkbox_terca"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    app:layout_constraintTop_toTopOf="@id/txt_terca"
                    app:layout_constraintStart_toStartOf="@+id/checkbox_segunda"
                    android:text="@string/frequenta_aulas_nas_tercas" />

                <TextView
                    android:id="@+id/txt_quarta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quarta_feira"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/txt_terca"
                    app:layout_constraintStart_toStartOf="@id/txt_terca" />

                <CheckBox
                    android:id="@+id/checkbox_quarta"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    app:layout_constraintTop_toTopOf="@id/txt_quarta"
                    app:layout_constraintStart_toStartOf="@+id/checkbox_segunda"
                    android:text="@string/frequenta_aulas_nas_quartas" />

                <TextView
                    android:id="@+id/txt_quinta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quinta_feira"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/txt_quarta"
                    app:layout_constraintStart_toStartOf="@id/txt_quarta" />

                <CheckBox
                    android:id="@+id/checkbox_quinta"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    app:layout_constraintTop_toTopOf="@id/txt_quinta"
                    app:layout_constraintStart_toStartOf="@+id/checkbox_segunda"
                    android:text="@string/frequenta_aulas_nas_quintas" />

                <TextView
                    android:id="@+id/txtSexta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sexta_feira"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/txt_quinta"
                    app:layout_constraintStart_toStartOf="@id/txt_quinta" />

                <CheckBox
                    android:id="@+id/checkbox_sexta"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    app:layout_constraintTop_toTopOf="@id/txtSexta"
                    app:layout_constraintStart_toStartOf="@+id/checkbox_segunda"
                    android:text="@string/frequenta_aulas_nas_sextas" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/avatar_motorista"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/img_foto_perfil"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="@id/constraint_grade_horarios"
            app:layout_constraintTop_toBottomOf="@id/constraint_grade_horarios"/>

        <TextView
            android:id="@+id/txt_motorista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motorista"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="@id/avatar_motorista"
            app:layout_constraintStart_toEndOf="@id/avatar_motorista" />

        <Button
            android:id="@+id/lbl_nome_motorista"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:backgroundTint="@color/white"
            android:padding="0dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:text="@string/ver_motoristas_disponiveis"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@id/txt_motorista"
            app:layout_constraintTop_toBottomOf="@id/txt_motorista" />

        <Button
            android:id="@+id/btn_salvar"
            style="@style/Edit_Button"
            android:backgroundTint="@color/LightGray"
            android:text="@string/salvar"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avatar_motorista" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>