<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcompanharTrajeto">

    <Toolbar
        android:id="@+id/toolbar_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/DarkGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/imageVubermoto"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            app:srcCompat="@drawable/img_logo" />

        <ImageButton
            android:id="@+id/btn_voltar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/img_seta_voltar"
            app:iconPadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="start"/>

    </Toolbar>

    <TextView
        android:id="@+id/txt_navegacao"
        style="@style/textView_navegacao"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/navegacao"
        app:layout_constraintStart_toStartOf="@id/toolbar_menu"
        app:layout_constraintTop_toBottomOf="@id/toolbar_menu" />

    <ImageView
        android:id="@+id/img_fotoUsuario"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@id/txt_navegacao"
        app:layout_constraintTop_toBottomOf="@id/toolbar_menu"
        android:background="@drawable/img_foto_perfil"/>

    <TextView
        android:id="@+id/txt_destino"
        style="@style/textView_navegacao"
        android:layout_marginTop="30dp"
        android:text="@string/destino"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_navegacao"
        app:layout_constraintTop_toBottomOf="@+id/txt_navegacao" />

    <TextView
        android:id="@+id/lbl_destino"
        style="@style/textView_navegacao"
        android:layout_marginStart="10dp"
        android:text="Indefinido"
        app:layout_constraintStart_toEndOf="@+id/txt_destino"
        app:layout_constraintTop_toTopOf="@+id/txt_destino" />

    <TextView
        android:id="@+id/txt_tempo"
        style="@style/textView_navegacao"
        android:layout_marginTop="30dp"
        android:text="@string/tempo_estimado"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_destino"
        app:layout_constraintTop_toBottomOf="@+id/txt_destino" />

    <TextView
        android:id="@+id/lbl_tempo"
        style="@style/textView_navegacao"
        android:layout_marginStart="10dp"
        android:text="Indefinido"
        app:layout_constraintStart_toEndOf="@+id/txt_tempo"
        app:layout_constraintTop_toTopOf="@+id/txt_tempo" />

</androidx.constraintlayout.widget.ConstraintLayout>